# Time_Capsule_File_Locker

./: README.md  package-lock.json  package.json
 cpp_core/: compress.cpp  decompress  encrypt  main  main.cpp  time_lock
backend/: aa.tcf  boss.huff  boss.tcf  compress  compress.cpp  decompress  decompress.cpp  decrypt  decrypt.cpp  encrypt.cpp  hash  hash.cpp  locked.tcf  main.cpp  metadata  metadata.cpp  output.tcf  text.huff  text.txt  time_lock.cpp
data/capsules/: 2.minFrogEnergy_1755649964470.tcf  BOSS_1748947644738.tcf  Riyansh_Sachan_BOI(1 and 2)_1751906714787.tcf  RiynahSachanResume_1755649572388.tcf  RiynahSachanResume_1755891961496.tcf  print-challan-receipt_1749483547238.tcf  print-challan-receipt_1749483572765.tcf
receiver/: Makefile  decryptor.cpp  keygen.cpp  utils.cpp
receiver/include/: decryptor.h  utils.h
receiver/ui/: app.js  index.html  style.css
sender/: Makefile  encryptor.cpp  utils.cpp
sender/include/: encryptor.h  utils.h
sender/ui/: app.js  index.html  style.css
server/:  package.json  .env  db.js  package.json  server.js
server/ utils/: fileUtils.js
server/api/: lock.js  unlock.js
server/controllers/: lockController.js  unlockController.js
server/db/: capsuleModel.js  init.js  schema.sql
server/routes/: lock.js  publicKey.js  release.js  unlock.js  upload.js
server/utils/: notifier.js  scheduler.js
shared/: aes_cbc.cpp  huffman.cpp  rsa_utils.cpp
shared/include/: aes_cbc.h  hash_utils.h  huffman.h  rsa_utils.h
wasm_build/: CMakeLists.txt  README.md  build.sh
web/: app.js  index.html  style.css  wasm-loader.js
